welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
if(Color.green){baisseBrosse();leveBrosse();}else{recule();}
         ^SlugTracking:6: error: not found: value esSurBiscuit
return esSurBiscuit();
       ^